objects/CSS_WS_Access_Code_Master_Catalog__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CSS_WS_Access_Code__c</fullName>
        <label>Access Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Active_Flag__c</fullName>
        <label>Active Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Application_Category__c</fullName>
        <label>Application Category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equip_Configuration__c</fullName>
        <label>Equip Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equip_ID__c</fullName>
        <label>Equip ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equip_Manufacturer__c</fullName>
        <label>Equip Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equip_Model_Series__c</fullName>
        <label>Equip Model Series</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CSS WS Access Code Master Catalogues</label>
    <listViews>
        <fullName>Access_Code_Master_View</fullName>
        <columns>CSS_WS_Engine_Family_Code__c</columns>
        <columns>CSS_WS_Equip_Configuration__c</columns>
        <columns>CSS_WS_Equip_ID__c</columns>
        <columns>CSS_WS_Equip_Manufacturer__c</columns>
        <columns>CSS_WS_Equip_Model_Series__c</columns>
        <columns>CSS_WS_Application_Category__c</columns>
        <columns>CSS_WS_Access_Code__c</columns>
        <columns>CSS_WS_Active_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>Access Code Master View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>